--- a/server/package.json
+++ b/server/package.json
@@ -36,8 +36,10 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.3",
+    "chalk": "^4.1.2",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.7",
@@ -45,7 +47,6 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongodb": "^6.13.0",
-    "connect-mongodb-session": "^5.0.0",
     "mongoose": "^8.10.1"
   }
 }
